--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,15 @@
-/**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+@import "./styles/iconfont.wxss";
+page,view,navigator,text,swipper,swipper-item,image,button,input{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box
+}
+image{
+  width: 100%;
+}
+page{
+  color: #666;
+  font-size: 28rpx;
+  /* 声明变量 */
+  --themeColor:#fbb928;
+}
