--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,12 @@
 <searchInput></searchInput>
+
+<!--轮播图开始-->
+<swiper autoplay circular indicator-dots>
+    <swiper-item wx:for="{{swiperList}}" wx:key="goods_id">
+        <image src="{{item.image_src}}" mode="widthFix"/>
+          
+    </swiper-item>
+      
+</swiper>
+  
+<!--轮播图结束-->
