--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -23,3 +23,26 @@
 
 <!--导航菜单结束-->
 
+
+<!--楼层开始-->
+<view class="index_floor">
+    <view class="floor_group" wx:for="{{floorList}}" wx:key="index1" wx:for-index="index1" wx:for-item="item1">
+        <view class="floor_title">
+            <image src="{{item1.floor_title.image_src}}" mode="widthFix" />
+        </view>
+        <view class="floor_content">
+            <navigator wx:for="{{item1.product_list}}" wx:key="name" wx:for-index="index2" wx:for-item="item2"> 
+            <!--
+                第一张图片自适应，其他图片不按比例 拉伸到相框的大小 mode="scaleToFill"
+                原图宽度/原图高度=变化后的宽度/变化后的高度
+                第一张图的高度=变化后的宽度*原图高度/原图宽度
+                =750rpx/3*386/232
+            -->
+
+                <image src="{{item2.image_src}}" mode="{{index2===0?'widthFix':'scaleToFill'}}"></image>
+            </navigator>
+        </view>
+    </view>  
+</view>
+  
+<!--楼层结束-->
