--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,14 +1,37 @@
 /* 轮播图开始 */
-.index_swiper swiper{
-    height: 340rpx;
+.index_swiper swiper {
+  height: 340rpx;
 }
 /* 轮播图结束 */
 /* 导航菜单开始 */
-.index_nav{
-    display: flex;
+.index_nav {
+  display: flex;
 }
-.index_nav navigator{
-    flex: 1;
-    padding: 20rpx
+.index_nav navigator {
+  flex: 1;
+  padding: 20rpx;
 }
 /* 导航菜单结束 */
+/* 楼层开始 */
+.index_floor .floor_group .floor_title {
+  background-color: #eee;
+}
+.index_floor .floor_group .floor_content {
+  overflow: hidden;
+}
+.index_floor .floor_group .floor_content navigator {
+  width: 33.3333%;
+  float: left;
+  border-left: 5rpx solid #fff;
+  border-right: 5rpx solid #fff;
+}
+.index_floor .floor_group .floor_content navigator:nth-last-child(-n+4) {
+  height: 207.97413793rpx;
+}
+.index_floor .floor_group .floor_content navigator:nth-last-child(-n+4) image{
+  height: 100%;
+}
+.index_floor .floor_group .floor_content navigator:nth-last-child(-n+2){
+  border-top: 5rpx solid #fff
+}
+/* 楼层结束 */
