--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -1,1 +1,47 @@
+<!-- 搜索组件 -->
+<mp-tabbar></mp-tabbar>
 
+<view class="cates_view">
+    <!-- 左边菜单部分开始 -->
+    <scroll-view class="menu_group" scroll-y>
+     <view class="menu_item {{currentIndex===index?'active':''}}"
+     wx:for="{{menuList}}"
+     wx:key="*this"
+     wx:for-index="index"
+     wx:for-item='item'
+     bindtap="handleMenuTap"
+     data-index="{{index}}"
+     >
+    {{item}}
+    </view>
+    </scroll-view>
+    <!-- 左边菜单部分结束 -->
+
+    <!-- 右边内容部分开始 -->
+    <scroll-view  class="goods_list" scroll-y>
+      <view class="goods_group"
+      wx:for="{{goodsData}}"
+      wx:key="index1"
+      wx:for-index="index1"
+      wx:for-item="item1"
+      >
+          <view class="goods_title">
+              <text class="separator">/</text>
+              <text class="group_title">{{item1.cat_name}}</text>
+              <text class="separator">/</text>
+          </view>
+          <view class="goods_content">
+              <navigator class="goods_item"
+              wx:for="{{item1.children}}"
+              wx:key="cat_id"
+              wx:for-index="index2"
+              wx:for-item="item2"
+              >
+              <image src="{{item2.cat_icon}}" mode="widthFix"/>
+                <view class="item_name">{{item2.cat_name}}</view>
+              </navigator>
+          </view>
+      </view>
+    </scroll-view>
+    <!-- 右边内容部分结束 -->
+</view>
