--- a/pages/goods_list/index.wxss
+++ b/pages/goods_list/index.wxss
@@ -1,1 +1,15 @@
-/* pages/goods_list/index.wxss */
+.goods_list{
+    display: flex;
+    height: 90rpx;
+}
+.goods_tab{
+    flex: 1;
+    flex-direction: column;
+    text-align: center;
+    
+    line-height: 90rpx;
+}
+.active{
+    color: var(--themeColor);
+    border-bottom: 1rpx solid red;
+}
