--- a/pages/goods_list/index.wxss
+++ b/pages/goods_list/index.wxss
@@ -1,15 +1,35 @@
-.goods_list{
+.goods_content{
+   
+}
+.goods_item{
     display: flex;
-    height: 90rpx;
+    border-top:4rpx solid #eee ;
+    padding: 20rpx;
 }
-.goods_tab{
+.goods_img{
     flex: 1;
-    flex-direction: column;
-    text-align: center;
-    
-    line-height: 90rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.active{
-    color: var(--themeColor);
-    border-bottom: 1rpx solid red;
+.goods_img image{
+    width: 80%;
+}
+.goods_info{
+    flex: 2;
+    display: flex;
+    font-size: 30rpx;
+    flex-direction: column;
+    justify-content: space-around;
+    /* padding: 20rpx */
+}
+.item_title{
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical
+}
+.item_price{
+    color: red;
+    font-size: 34rpx;
 }
