--- a/pages/goods_detail/index.wxml
+++ b/pages/goods_detail/index.wxml
@@ -1,2 +1,59 @@
-<!--pages/goods_detail/index.wxml-->
-<text>pages/goods_detail/index.wxml</text>
+<view class="goods_detail">
+    <!-- 轮播图开始 -->
+    <view class="detail_swiper">
+        <swiper indicator-dots autoplay circular>
+            <swiper-item wx:for="{{goodsList.pics}}" wx:key="pics_id" bindtap="handleImagePreview" data-current="{{item.pics_mid_url}}">
+                <image src="{{item.pics_mid_url}}" mode="aspectFit" />
+            </swiper-item>
+        </swiper>
+    </view>
+    <!-- 轮播图结束 -->
+    <!-- 商品价格开始 -->
+    <view class="goods_price">￥{{goodsList.goods_price}}</view>
+    <!-- 商品价格结束 -->
+    <!-- 商品信息开始 -->
+    <view class="goods_info">
+        <view class="goods_title">{{goodsList.goods_name}}</view>
+        <view class="goods_collect" bindtap="handleCollect">
+            <text class="iconfont icon-shoucang"></text>
+            <view>收藏</view>
+            <!-- <text class="iconfont icon-shoucang1"></text> -->
+        </view>
+    </view>
+    <!-- 商品信息结束 -->
+    <!-- 图文详情开始 -->
+    <view class="detail_info">
+        <view class="detail_info_title">图文详情</view>
+        <view class="detail_info_content">
+            <rich-text nodes="{{goodsList.goods_introduce}}">
+            </rich-text>
+
+        </view>
+    </view>
+    <!-- 图文详情结束 -->
+    <!-- 底部工具栏开始 -->
+    <view class="btm_tool">
+        <view class="tool_item">
+            <button open-type="contact"></button>
+            <text class="iconfont icon-kefu"></text>
+            <view class="tool_name">客服</view>
+        </view>
+        <view class="tool_item">
+                <button open-type="share"></button>
+            <text class="iconfont icon-yixianshi-"></text>
+            <view class="tool_name">分享</view>
+        </view>
+        <navigator class="tool_item" url="/pages/cart/index" open-type="switchTab">
+            <text class="iconfont icon-gouwuche"></text>
+            <view class="tool_name">购物车</view>
+        </navigator>
+        <view class="tool_item btn_cart">
+            加入购物车
+        </view>
+        <view class="tool_item btn_buy">
+            立即购买
+        </view>
+
+    </view>
+    <!-- 底部工具栏开始 -->
+</view>
