--- a/pages/goods_detail/index.wxml
+++ b/pages/goods_detail/index.wxml
@@ -47,7 +47,7 @@
             <text class="iconfont icon-gouwuche"></text>
             <view class="tool_name">购物车</view>
         </navigator>
-        <view class="tool_item btn_cart">
+        <view class="tool_item btn_cart" bindtap="handleCartAdd">
             加入购物车
         </view>
         <view class="tool_item btn_buy">
