--- a/pages/goods_list/index.wxss
+++ b/pages/goods_list/index.wxss
@@ -1,12 +1,9 @@
-.goods_content{
-   
-}
 .goods_item{
     display: flex;
-    border-top:4rpx solid #eee ;
-    padding: 20rpx;
+    border-bottom:1rpx solid #eee ;
+    padding: 10rpx 0;
 }
-.goods_img{
+.goods_content .goods_item .goods_img{
     flex: 1;
     display: flex;
     justify-content: center;
@@ -14,10 +11,12 @@
 }
 .goods_img image{
     width: 80%;
+    height: 100%;
 }
 .goods_info{
     flex: 2;
     display: flex;
+    padding: 20rpx;
     font-size: 30rpx;
     flex-direction: column;
     justify-content: space-around;
@@ -32,4 +31,9 @@
 .item_price{
     color: red;
     font-size: 34rpx;
+}
+.list_no_more{
+    text-align: center;
+    height: 150rpx;
+    line-height: 150rpx;
 }
